#35609 Checkout sections control update.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1706,29 +1706,28 @@
   "cart.warehouses": "Warehouses",
   "cart.branches": "Branches",
   "checkout.header.items": "Checkout ({value} Items)",
-
   "checkout.header.reviewItems": "1. Review Items",
   "checkout.header.shippingAndTerms": "2. Shipping & Terms",
   "checkout.header.payment": "3. Payment",
   "checkout.header.freightSelection": "4. Freight Selection",
-
-
+  "checkout.reviewItems.packaging": "Packaging",
+  "checkout.reviewItems.location": "Location",
+  "checkout.reviewItems.price": "Price",
+  "checkout.reviewItems.shippingInformation": "Shipping Information",
+  "checkout.reviewItems.quantity": "Quantity",
+  "checkout.reviewItems.leadTime": "Lead Time",
+  "checkout.reviewItems.grossWeight": "Gross Weight",
+  "checkout.reviewItems.paymentTerms": "Payment Terms",
+  "checkout.reviewItems.days": "{days} days",
 
   "checkout.header.returnToCart": "Are you sure you want to return to your Shopping Cart?",
   "checkout.header.button.stayInCheckout": "Stay in Checkout",
   "checkout.header.button.returnToCart": "Return to Cart",
-
-
   "checkout.button.confirmItems": "Confirm Items",
   "checkout.button.useThisAddress": "Use this Address",
   "checkout.button.useThisPaymentMethod": "Use this Payment Method",
   "checkout.button.useThisFreight": "Use this Freight",
   "checkout.button.placeOrder": "Place Order",
-
-
-
-
-
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
   "cart.shoppingCartHeader": "ITEMS ({number})",
