--- a/localization/en.json
+++ b/localization/en.json
@@ -1719,7 +1719,6 @@
   "checkout.reviewItems.grossWeight": "Gross Weight",
   "checkout.reviewItems.paymentTerms": "Payment Terms",
   "checkout.reviewItems.days": "{days} days",
-
   "checkout.header.returnToCart": "Are you sure you want to return to your Shopping Cart?",
   "checkout.header.button.stayInCheckout": "Stay in Checkout",
   "checkout.header.button.returnToCart": "Return to Cart",
@@ -1728,6 +1727,10 @@
   "checkout.button.useThisPaymentMethod": "Use this Payment Method",
   "checkout.button.useThisFreight": "Use this Freight",
   "checkout.button.placeOrder": "Place Order",
+  "checkout.button.myWarehouses": "My Warehouses",
+  "checkout.button.deliveryAddresses": "Delivery Addresses",
+  "checkout.shipping.searchInput": "Search by Name or Address",
+
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
   "cart.shoppingCartHeader": "ITEMS ({number})",
