#35770 Fixed Avatar upload/delete. Fixed file type filters.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2559,6 +2559,7 @@
   "order.weightLimitExceeded": "Your order weight exceeds weight limit for automatic shipping quotes. Your shipping quote need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
   "order.quoteReceived": "If you already received the shipping quote and agree, please type in the provided Quote Id and continue with shipping order.",
   "profile.myProfile": "My Profile",
+  "profile.avatarPicture": "Avatar Picture",
   "profile.lastLoginAt": "Last login at:",
   "order.requestCreditPopUpHeader": "REQUEST CREDIT",
   "order.requestingCredit": "Requesting a credit of ",
