#35609 Checkout page - updates

--- a/localization/en.json
+++ b/localization/en.json
@@ -1730,7 +1730,16 @@
   "checkout.button.myWarehouses": "My Warehouses",
   "checkout.button.deliveryAddresses": "Delivery Addresses",
   "checkout.shipping.searchInput": "Search by Name or Address",
-
+  "checkout.shipping.addAddress": "Add New Address",
+  "checkout.shipping.editAddress": "Edit Address",
+  "checkout.freight.estDelivery": "Est. Delivery",
+  "checkout.freight.etd": "ETD",
+  "checkout.freight.service": "Service",
+  "checkout.summary.orderSummary": "Order Summary",
+  "checkout.summary.subTotal": "Sub Total",
+  "checkout.summary.freightCost": "Freight Cost",
+  "checkout.summary.estimatedTax": "Estimated Tax",
+  "checkout.summary.orderTotal": "Order Total",
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
   "cart.shoppingCartHeader": "ITEMS ({number})",
