--- a/localization/en.json
+++ b/localization/en.json
@@ -962,6 +962,7 @@
   "global.nacdMember": "NACD Member",
   "global.repositionNotAllowed": "Requested reposition is not allowed",
   "global.fixedColumnsIssue": "Fixed column: ''{fixedColTitle}'' can not be repositioned.",
+  "global.typeToSearch": "Type to search",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
