#35609 Optimizations, Add/Edit address/warehouse fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1740,6 +1740,12 @@
   "checkout.summary.freightCost": "Freight Cost",
   "checkout.summary.estimatedTax": "Estimated Tax",
   "checkout.summary.orderTotal": "Order Total",
+  "checkout.summary.orderTotalValue": "Order Total: {value}",
+  "checkout.summary.continueToFinish": "Continue to {value} to finish checking out.",
+  "checkout.summary.step4": "step 4",
+  "checkout.summary.byPlacingYourOrder": "By placing your order, you agree to Echosystem’s {privacyPolicy} and {conditionsOfUse}.",
+  "checkout.summary.privacyPolicy": "Privacy Policy",
+  "checkout.summary.conditionsOfUse": "Conditions Of Use",
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
   "cart.shoppingCartHeader": "ITEMS ({number})",
