--- a/localization/en.json
+++ b/localization/en.json
@@ -128,6 +128,7 @@
   "admin.companyGenericProduct.sdsRevisionDate": "SDS Revision Date",
   "admin.proprietary": "Proprietary",
   "admin.sds.versionNumber": "SDS Version Number",
+  "admin.sds.enterVersionNumber": "Enter SDS Version Number",
   "admin.sds.revisionDate": "SDS Revision Date",
   "admin.user": "User",
   "admin.searchUser": "Search user",
@@ -798,6 +799,7 @@
   "global.tdsPreparedBy": "TDS Prepared by",
   "global.tdsRevisionDate": "TDS Revision Date",
   "global.tdsVersionNumber": "TDS Version Number",
+  "global.enterTdsVersionNumber": "Enter TDS Version Number",
   "global.teratogenicity": "Teratogenicity",
   "global.usesAdvisedAgainst": "Uses Advised against",
   "global.vaporDensity": "Vapor Density",
@@ -963,6 +965,11 @@
   "global.repositionNotAllowed": "Requested reposition is not allowed",
   "global.fixedColumnsIssue": "Fixed column: ''{fixedColTitle}'' can not be repositioned.",
   "global.typeToSearch": "Type to search",
+  "global.enterManufacturerProductCodes": "Enter Manufacturer Product Codes",
+  "global.enterEmergencyCompanyName": "Enter Emergency Company Name",
+  "global.enterEmergencyContactName": "Enter Emergency Contact Name",
+  "global.zero": "0",
+  "global.empty": " ",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
