--- a/localization/en.json
+++ b/localization/en.json
@@ -970,6 +970,9 @@
   "global.enterEmergencyContactName": "Enter Emergency Contact Name",
   "global.zero": "0",
   "global.empty": " ",
+  "global.chooseExistingDocument": "Choose Existing Document",
+  "global.orUploadNewDocumet": "Or Upload New Document",
+  "global.browseFileHere": "Browse file here",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
