--- a/localization/en.json
+++ b/localization/en.json
@@ -1705,7 +1705,7 @@
   "cart.addresses": "Addresses",
   "cart.warehouses": "Warehouses",
   "cart.branches": "Branches",
-  "checkout.header.items": "Checkout ({value} Items)",
+  "checkout.header.items": "Checkout ({value} items)",
   "checkout.header.reviewItems": "1. Review Items",
   "checkout.header.shippingAndTerms": "2. Shipping & Terms",
   "checkout.header.payment": "3. Payment",
@@ -1746,6 +1746,7 @@
   "checkout.summary.byPlacingYourOrder": "By placing your order, you agree to Echosystem’s {privacyPolicy} and {conditionsOfUse}.",
   "checkout.summary.privacyPolicy": "Privacy Policy",
   "checkout.summary.conditionsOfUse": "Conditions Of Use",
+  "checkout.titlePage": "Echosystem / Checkout",
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
   "cart.shoppingCartHeader": "ITEMS ({number})",
