--- a/localization/en.json
+++ b/localization/en.json
@@ -193,7 +193,7 @@
   "navigation.purchaseOrders": "Purchase Orders",
   "navigation.purchaseOrdersDetail": "Purchase Orders Detail",
   "navigation.settings": "Settings",
-  "navigation.myAccount": "My Account",
+  "navigation.myTradePass": "My TradePass",
   "navigation.userSettings": "User Settings",
   "navigation.admin": "Admin",
   "navigation.operations": "Operations",
