DT-250 - Company Settings -> Settings

--- a/localization/en.json
+++ b/localization/en.json
@@ -2667,7 +2667,7 @@
   "title.settings.global-broadcast": "Global Price Book",
   "title.settings.logistics": "Logistics",
   "title.settings.products": "Product Catalog",
-  "title.settings.system-settings": "Company Settings",
+  "title.settings.system-settings": "Settings",
   "title.settings.users": "Users",
   "title.settings.warehouses": "Warehouses",
   "title.settings.locations": "Locations",
