DT-195 - redesigned Alerts page

--- a/localization/en.json
+++ b/localization/en.json
@@ -202,6 +202,10 @@
   "navigation.company-product-catalog": "Company Product Catalog",
   "navigation.company-inventory": "Company Inventory",
   "navigation.alerts": "Notifications",
+  "navigation.alerts.allNotifications": "All Notifications",
+  "navigation.alerts.shippingQuoteRequest": "Shipping Quote Requests",
+  "navigation.alerts.companyGenericProductRequests": "Product Requests",
+  "navigation.alerts.disputes": "Order Disputes",
   "navigation.companies": "Companies",
   "navigation.dashboard": "Dashboard",
   "navigation.products": "Products",
