--- a/localization/en.json
+++ b/localization/en.json
@@ -1142,7 +1142,7 @@
   "login.incorrect": "Incorrect username or password",
   "login.welcomeBack": "Welcome back!",
   "payments.notAvailableAddOne": "You have no Bank Account specified. To continue, please {addBankAccount} first.",
-  "payments.bankAccountCannnotRetrived": "Bank accounts cannot be retrieved at the moment. Please try again later.",
+  "payments.bankAccountCannnotRetrieved": "Bank accounts cannot be retrieved at the moment. Please try again later.",
   "payments.addBankAccount": "Add Bank Account",
   "registration.header": "Header",
   "registration.firstName": "Your First Name",
@@ -3090,7 +3090,7 @@
   "submitOffer.availableDate": "Available Date",
   "submitOffer.total": "Total",
   "settings.velloci.difficulties": "Velloci is experiencing some difficulties, please try again later",
-  "settings.logistics.difficulties": "Logistics cannot be retrived at the moment. Please try again later.",
+  "settings.logistics.difficulties": "Logistics cannot be retrieved at the moment. Please try again later.",
   "velloci.companyVerification.list.ein": "EIN Verification Letter (IRS Issued SS4 Confirmation Letter)",
   "velloci.companyVerification.list.field": "Filed and stamped articles of incorporation",
   "velloci.companyVerification.list.tax": "Sales/Use Tax License",
