DT-195 - Alerts table redesign + filters

--- a/localization/en.json
+++ b/localization/en.json
@@ -32,8 +32,8 @@
   "alerts.status.read": "Read",
   "alerts.status.unread": "Unread",
   "alerts.dropdown.more": "More ...",
-  "alerts.dropdown.markAsRead": "Mark as read",
-  "alerts.dropdown.markAsUnread": "Mark as unread",
+  "alerts.dropdown.markAsRead": "Mark as Read",
+  "alerts.dropdown.markAsUnread": "Mark as Unread",
   "alerts.dropdown.delete": "Delete",
   "alerts.here": "here",
   "alerts.genericProduct": "{name} from {company} has requested to upload a new Company Generic Product. Please see the document attached. Once uploaded, click {here} to send a notification to the requester that the upload has been completed.",
