DT-171 Redo Sidebar to Modal - Company Product

--- a/localization/en.json
+++ b/localization/en.json
@@ -568,8 +568,8 @@
   "global.saveChanges": "Save Changes",
   "global.edit": "Edit",
   "global.new": "New",
-  "global.editCompanyProduct": "Edit Company Product",
-  "global.addCompanyProduct": "Add Company Product",
+  "global.editProduct": "Edit Product",
+  "global.addProduct": "Add Product",
   "global.uploadANewProduct": "Upload a new Product",
   "global.uploadASDSInfoSheet": "Upload a SDS/Info Sheet",
   "global.editAltNames": "Edit Alternative Names",
@@ -937,9 +937,9 @@
   "global.processed": "Processed",
   "global.paymentTerms": "Payment Terms",
   "global.change": "Change",
-  "global.packaging": "PACKAGING",
+  "global.packaging": "Packaging",
   "global.pracing": "PRACING",
-  "global.document": "DOCUMENT",
+  "global.document": "Document",
   "global.specifications": "Specifications",
   "global.testMethods": "Test Methods",
   "global.property": "Property",
@@ -1894,6 +1894,10 @@
   "productCatalog.selectNmfcCode": "Select NMFC Code",
   "productCatalog.enterInciName": "Enter INCI Name",
   "productCatalog.selectFreightClass": "Select Freight Class",
+  "productCatalog.selectProduct": "Select Product",
+  "productCatalog.typeToSearch": "Type to Search...",
+  "productCatalog.chooseExistingDocument": "Choose Existing Document",
+  "productCatalog.orUploadNewDocument": "Or Upload New Document",
   "notifications.systemSettingsUpdated.header": "System settings updated",
   "notifications.systemSettingsUpdated.content": "System settings successfully updated",
   "notifications.userCreated.content": "User {name} successfully created.",
