--- a/localization/en.json
+++ b/localization/en.json
@@ -3155,5 +3155,24 @@
   "settings.tradeCriteria.socialPresence.subLabel": "Websites and social media is often an indicator of a companies integrity. How many social accounts do you  prefer your customers/partners have?",
   "settings.tradeCriteria.socialPresence.placeholder": "Select Social Presence",
   "myNetworks.search": "Search your connection",
-  "myNetworks.filterByType": "Filter by type"
+  "myNetworks.filterByType": "Filter by type",
+  "myNetworks.detailRow.transactions": "Transactions",
+  "myNetworks.detailRow.averageValue": "Average Value",
+  "myNetworks.detailRow.legalBusinessName": "Legal Business Name",
+  "myNetworks.detailRow.ein": "EIN",
+  "myNetworks.detailRow.telephoneNumber": "Telephone Number",
+  "myNetworks.detailRow.inBusinessSince": "In Business Since",
+  "myNetworks.detailRow.numberOfEmployees": "Number of Employees",
+  "myNetworks.detailRow.legalData": "Legal Data",
+  "myNetworks.detailRow.website": "Website",
+  "myNetworks.detailRow.facebookHandle": "Facebook Handle",
+  "myNetworks.detailRow.linkedInHandle": "LinkedIn Handle",
+  "myNetworks.detailRow.twitterHandle": "Twitter Handle",
+  "myNetworks.detailRow.tradePassConnection": "TradePass Connections",
+  "myNetworks.detailRow.marketingSocialMedia": "Marketing & Social Media",
+  "myNetworks.detailRow.verifiedData": "Verified Data",
+  "myNetworks.detailRow.certificateInsurance": "Certificate of Insurance",
+  "myNetworks.detailRow.linkedBankAccounts": "Linked Bank Accounts",
+  "myNetworks.detailRow.articlesIncorporation": "Articles of Incorporation",
+  "myNetworks.detailRow.tradeOrganization": "Trade Organization"
 }
