DT-154 Added datagrid display mode - combination of Group/Tree mode with row detail. Implemented in My TradePass / Locations / My Customers.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2337,8 +2337,8 @@
   "settings.bankAccounts.uploadDoc.license": "License",
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
   "settings.bankAccounts.uploadDoc.other": "Other",
-  "settings.tables.deliveryAddresses.buttonAdd": "Add Customer Ship To Address",
-  "settings.tables.deliveryAddresses.search": "Search Customer Ship To Address",
+  "settings.tables.myCustomers.buttonAdd": "Add Customer",
+  "settings.tables.myCustomers.search": "Search Customer",
   "settings.tables.logistics.buttonAdd": "Add Logistics",
   "settings.tables.logistics.search": "Search logistics ",
   "settings.tables.documents.buttonAdd": "Add Document",
@@ -2348,7 +2348,7 @@
   "settings.warehouses.enterEmailAddress": "Enter Email Address",
   "settings.warehouses.enterTaxId": "Enter Tax ID",
   "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here",
-  "settings.locations.menu.deliveryLocations": "Customer Ship To",
+  "settings.locations.menu.myCustomers": "My Customers",
   "settings.locations.menu.pickUpLocations": "Warehouses",
   "settings.locations.menu.branches": "Branches",
   "settings.branches.setAsPrimaryBranch": "Set as Primary Branch",
