--- a/localization/en.json
+++ b/localization/en.json
@@ -3124,6 +3124,11 @@
   "detailRow.sds": "SDS",
   "detailRow.cofA": "C of A",
   "detailRow.orderTotal": "Order Total",
+  "detailRow.aggregateInsurance": "Insurance Requirements",
+  "detailRow.daysBeyond": "Days Beyond Term",
+  "detailRow.creditRisk": "Credit Risk",
+  "detailRow.violations": "Legal & Financial Violations",
+  "detailRow.socialPresence": "Social Presence",
   "broadcast.saveAsTemplate": "Save as Templates",
   "product.packaging.selectFirst": "Please select Packaging Unit",
   "inventory.modal.editListing": "Edit Listing",
@@ -3166,10 +3171,11 @@
   "myNetworks.detailRow.legalData": "Legal Data",
   "myNetworks.detailRow.website": "Website",
   "myNetworks.detailRow.facebookHandle": "Facebook Handle",
+  "myNetworks.detailRow.instagramHandle": "Instagram Handle",
   "myNetworks.detailRow.linkedInHandle": "LinkedIn Handle",
   "myNetworks.detailRow.twitterHandle": "Twitter Handle",
   "myNetworks.detailRow.tradePassConnection": "TradePass Connections",
-  "myNetworks.detailRow.marketingSocialMedia": "Marketing & Social Media",
+  "myNetworks.detailRow.marketingData": "Marketing & Social Media",
   "myNetworks.detailRow.verifiedData": "Verified Data",
   "myNetworks.detailRow.certificateInsurance": "Certificate of Insurance",
   "myNetworks.detailRow.linkedBankAccounts": "Linked Bank Accounts",
