DT-301 fixes for Companies import map + removed dropdown for Companies import and Company Generic Products import

--- a/localization/en.json
+++ b/localization/en.json
@@ -1039,6 +1039,7 @@
   "import.companies.primaryUserName": "Primary User Name",
   "import.companies.primaryUserPhone": "Primary User Phone",
   "import.companies.tin": "TIN",
+  "import.companies.tinType": "TIN Type",
   "import.companies.website": "Website",
   "company.legalCompanyName": "Legal Company Name",
   "company.dba": "Doing Business As",
