DT-315 - Login Page + Reset/Set Password pages (partially applied also on other unauthorized pages)

--- a/localization/en.json
+++ b/localization/en.json
@@ -1152,6 +1152,7 @@
   "login.password": "Password",
   "login.login": "LOG IN",
   "login.logging": "Logging",
+  "login.loginPage": "Login Page",
   "login.incorrect": "Incorrect username or password",
   "login.welcomeBack": "Welcome back!",
   "payments.notAvailableAddOne": "You have no Bank Account specified. To continue, please {addBankAccount} first.",
