--- a/localization/en.json
+++ b/localization/en.json
@@ -3191,7 +3191,11 @@
   "myNetworks.detailRow.disconnect": "Disconnect",
   "myNetworks.detailRow.reject": "Reject",
   "myNetworks.detailRow.accept": "Accept",
-  "myNetworks.detailRow.modal.content": "Disconnecting will remove this company from your Network. You can request to connect again at anytime.",
+  "myNetworks.detailRow.modal.disconnect": "Disconnecting will remove this company from your Network. You can request to connect again at anytime.",
+  "myNetworks.detailRow.modal.reject": "Do you want to reject this request connection? You can request to connect again at anytime.",
+  "myNetworks.detailRow.modal.accept": "Do you want to accept this request connection?",
+  "myNetworks.detailRow.modal.remove": "Do you want to remove this connection?",
+  "myNetworks.detailRow.modal.invite": "Do you want to invite this company?",
   "myNetworks.inviteModal.title": "TradePass ID",
   "myNetworks.inviteModal.placeholder": "Enter TradePass ID",
   "myNetworks.inviteModal.errorLabel": "No member was found in this TradePass ID",
