Resolve DT-242 "Carrierlistinsuperadmin"

--- a/localization/en.json
+++ b/localization/en.json
@@ -137,9 +137,12 @@
   "admin.addCompany": "Add Company",
   "admin.addUser": "Add User",
   "admin.searchLogisticsProvider": "Search Logistics Provider",
+  "admin.searchCarrier": "Search Carrier",
   "admin.admin": "Re-Invoice",
   "admin.addLogisticsProvider": "Add Logistics Provider",
   "admin.editLogisticsProvider": "Edit Logistics Provider",
+  "admin.addCarrier": "Add Carrier",
+  "admin.editCarrier": "Edit Carrier",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
@@ -420,6 +423,7 @@
   "global.agreeAndContinue": "Agree and Continue",
   "global.accessDenied": "Access Denied!",
   "global.logistics": "Logistics",
+  "global.carriers": "Carriers",
   "global.packagingUnit": "Packaging Unit",
   "global.genericProductName": "Generic Product Name",
   "global.packagesAvailable": "Packages Available",
@@ -1150,6 +1154,8 @@
   "confirm.operations.deleteRequest.content": "Do you really want to delete ''{name}'' create request?",
   "confirm.admin.deleteLogisticProvider.title": "Delete Logistic Provider",
   "confirm.admin.deleteLogisticProvider.content": "Do you really want to delete ''{name}'' logistic provider?",
+  "confirm.admin.deleteCarrier.title": "Delete Carrier",
+  "confirm.admin.deleteCarrier.content": "Do you really want to delete ''{name}'' carrier?",
   "login.username": "Username",
   "login.password": "Password",
   "login.login": "LOG IN",
@@ -2414,6 +2420,14 @@
   "logistics.reinvoice": "Re-Invoice",
   "logistics.note": "Note",
   "logistics.emailInfo": "When generated, BOL will be sent to provided email addresses. If kept empty, BOL will not be sent automatically.",
+  "carrier.code": "Code",
+  "carrier.name": "Name",
+  "carrier.blindShipmentSupport": "Blind Shipment Support",
+  "carrier.price": "Price",
+  "carrier.enterCode": "Enter Code",
+  "carrier.enterName": "Enter Name",
+  "carrier.selectBlindShipmentSupport": "Select option",
+  "carrier.enterPrice": "Enter Price",
   "marketplace.available": "Avail PKGs",
   "marketplace.packaging": "Packaging",
   "marketplace.quantity": "Quantity",
@@ -2681,6 +2695,8 @@
   "filter.searchProductGroup": "Search Product Group",
   "filter.searchCasProduct": "Search CAS Product",
   "title.settings": "My TradePass - {tab}",
+  "title.admin.carriers": "Carriers",
+  "title.settings": "Settings - {tab}",
   "title.settings.bank-accounts": "Bank Accounts",
   "title.settings.branches": "Branches",
   "title.settings.company-details": "Company Details",
