DT-151 - UploadAttachment for WarehouseSidebar

--- a/localization/en.json
+++ b/localization/en.json
@@ -2275,8 +2275,8 @@
   "settings.addDeliveryAddress": "Add Delivery Address",
   "settings.editDeliveryAddress": "Edit Delivery Address",
   "settings.certifications": "Certifications",
-  "settings.certifications.isCertifiedToDEA": "Is this location certified to receive DEA List I chemicals?",
-  "settings.certifications.taxExemptPurchase": "Will this location receive tax exempt purchases? (not applicable for AK, OR, MT, VT or DE)",
+  "settings.certifications.dea": "Is this location certified to receive DEA List I chemicals?",
+  "settings.certifications.taxExempt": "Will this location receive tax exempt purchases? (not applicable for AK, OR, MT, VT or DE)",
   "settings.contactInfo": "Contact Info",
   "settings.contactEmail": "Contact Email",
   "settings.contactPhone": "Contact Phone",
