--- a/localization/en.json
+++ b/localization/en.json
@@ -2905,6 +2905,7 @@
   "dashboard.totalBroadcastedValueWithoutMilion.title": "Broadcasted",
   "dashboard.totalUsersCount.title": "Users",
   "dashboard.totalProductOffers.title": "Product Offers",
+  "dashboard.totalPartnersCompanies.title": "Partners",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
   "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
   "dasboard.companySales.graph.title": "Company Sum Of Sales Monthly",
