Resolve DT-247 "Newcompanydetailspage"

--- a/localization/en.json
+++ b/localization/en.json
@@ -1046,6 +1046,7 @@
   "company.legalCompanyName": "Legal Company Name",
   "company.dba": "Doing Business As",
   "company.businessType": "Business Type",
+  "company.pickOne": "Pick One",
   "company.cin": "Company Identification Number (CIN)",
   "company.tin": "Tax Identification Number (TIN)",
   "company.tinType": "TIN Type",
@@ -1062,6 +1063,54 @@
   "company.logoButtonDelete": "Delete",
   "company.logoButtonUpload": "Upload",
   "company.logoButtonChange": "Change",
+  "company.companyDetails": "Company Details",
+  "company.companyFormDescription": "The following information will help other businesses find you and determine if you are compliant with their practices.",
+  "company.dbaName": "DBA Name",
+  "company.dbaNameIfApplicable": "DBA Name {ifApplicable}",
+  "company.ifApplicable": "(if applicable)",
+  "company.businessName": "Business Name",
+  "company.websiteAndSocialMedia": "Website and Social Media",
+  "company.businessContact": "Business Contact",
+  "company.yourLegalAddress": "Your Legal Address",
+  "company.legalDocumentation": "Legal Documentation",
+  "company.federalOwnershipCertifications": "Federal Ownership Certifications",
+  "company.federalOwnershipManagementCertifications": "Federal ownership / Management Certifications",
+  "company.legalBusinessName": "Legal Business Name",
+  "company.enterLegalBusinessName": "Enter Legal Business Name",
+  "company.website": "Website",
+  "company.enter.websiteUrl": "Enter Website URL",
+  "company.socialLinkedin": "LinkedIn",
+  "company.enter.socialLinkedinUrl": "Enter LinkedIn URL",
+  "company.socialFacebook": "Facebook",
+  "company.enter.socialFacebookUrl": "Enter Facebook URL",
+  "company.socialTwitter": "Twitter",
+  "company.enter.socialTwitterUrl": "Enter Twitter URL",
+  "company.socialInstagram": "Instagram",
+  "company.enter.socialInstagramUrl": "Enter Instagram URL",
+  "company.emailAddress": "Email Address",
+  "company.enterEmailAddress": "Enter Email Address",
+  "company.recommendedImage": "Recommended image in transparent PNG format",
+  "company.companySloganOrTagline": "Company Slogan or Tagline",
+  "company.enterCompanySloganOrTagline": "Enter Company Slogan or Tagline",
+  "company.tradeOrganizations": "Trade Organizations",
+  "company.selectTradeOrganizations": "Select Trade Organizations",
+  "company.selectFederalOwnershipCertifications": "Select Federal Ownership Certifications",
+  "company.managementCertifications": "Management Certifications",
+  "company.selectManagementCertifications": "Select Management Certifications",
+  "company.addYour": "Add Your {name}",
+  "company.certification": "Certification",
+  "company.browseFileHere": "Browse file here",
+  "company.yourIndustryType": "Your Industry Type",
+  "company.selectIndustryType": "Select Industry Type",
+  "company.taxIdNum": "Tax Identification Number",
+  "company.or": "OR",
+  "company.ein": "EIN",
+  "company.ssn": "SSN",
+  "company.enterEin": "Enter EIN",
+  "company.enterSsn": "Enter SSN",
+  "company.update": "Update",
+  "company.remove": "Remove",
+  "company.add": "Add",
   "confirm.editOrAddNew.header": "Edit or Add New",
   "confirm.editOrAddNew.content": "If you like to continue editing this product offer by adding documents, price tiers, or price book rules, click Edit. If you would like to add a new Inventory Item, click New.",
   "confirm.deleteNmfcNumber.header": "Delete NMFC Number",
