--- a/localization/en.json
+++ b/localization/en.json
@@ -986,6 +986,7 @@
   "global.browseFileHere": "Browse file here",
   "global.invite": "Invite",
   "global.search": "Search",
+  "global.na": "N/A",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -2263,6 +2264,13 @@
   "settings.user.setAsCompPrimUser": "Set as Company Primary User",
   "settings.assignUserRoles": "Assign User Roles",
   "settings.user.userSettings": "User Settings",
+  "settings.user.purchaseAuthorization": "Purchase Authorization",
+  "settings.user.orderPurchaseLimit": "Order Purchase Limit",
+  "settings.user.dailyPurchaseLimit": "Daily Purchase Limit",
+  "settings.user.mounthlyPurchaseLimit": "Monthly Purchase Limit",
+  "settings.user.regulatoryDhsCoiAuthorized": "Authorized to purchase DHS Chemicals of Interest",
+  "settings.user.regulatoryHazmatAuthorized": "Authorized to purchase Hazardous Chemicals",
+  "settings.user.regulatoryDeaListAuthorized": "Authorized to purchase DEA Regulated List I and II Substances",
   "settings.editAlternativeNames": "Edit Alternative Names",
   "settings.editRoles": "Edit Roles",
   "settings.dwollaOnlyForUSA": "Dwolla is only supported for companies located in USA.",
