DT-159 Design and data parsing updates.

--- a/localization/en.json
+++ b/localization/en.json
@@ -300,7 +300,6 @@
   "casProduct.editCasProduct": "Edit CAS Product",
   "casProduct.enterCasNumber": "Enter CAS Number",
   "casProduct.enterCasName": "Enter CAS Name",
-
   "casProduct.epaSection302EhsTPQ": "Section 302 (EHS) TPQ",
   "casProduct.epaSection304EhsRQ": "Section 304 (EHS) RQ",
   "casProduct.epaCerclaRq": "CERCLA RQ",
@@ -342,6 +341,7 @@
   "casProduct.internationalAICS": "AICS",
   "casProduct.internationalIECSC": "IECSC",
   "casProduct.internationalKECL": "KECL",
+  "casProduct.selectOption": "Select Option",
   "global.reset": "Reset",
   "global.placeholder.taxId": "Enter Tax ID",
   "global.placeholder.deliveryNotes": "Write delivery notes here",
@@ -385,7 +385,10 @@
   "global.regulatoryCaProp65": "CA Prop 65",
   "global.regulatoryRightToKnow": "Right To Know",
   "global.regulatoryDea": "DEA",
+  "global.regulatoryDhsCoi": "DHS COI",
+  "global.regulatoryReach": "REACH",
   "global.regulatoryInternational": "International",
+  "global.regulatoryOthers": "Others",
   "global.propsFilter": "Properties Filter",
   "global.all": "All",
   "global.iata": "IATA",
