--- a/localization/en.json
+++ b/localization/en.json
@@ -314,11 +314,12 @@
   "casProduct.rtkPennslyvania": "Pennslyvania",
   "casProduct.rtkIllinois": "Illinois",
   "casProduct.rtkRhodeIsland": "Rhode Island",
-  "casProduct.dhsReleaseMinimumConcentration": "Release: Minimum Concentration (%)",
+  "casProduct.dhsReleaseMinimumConcentration": "Release: Minimum Concentration",
   "casProduct.dhsReleaseScreeningThresholdQuantitie": "Release: Screening Threshold Quantitiees (in pounds)",
-  "casProduct.dhsTheftMinimumConcentration": "Theft: Minimum Concentration (%)",
+  "casProduct.dhsTheftMinimumConcentration": "Theft: Minimum Concentration",
   "casProduct.dhsTheftScreeningThresholdQuantities": "Theft: Screening Threshold Quantitie",
-  "casProduct.dhsSabotageMinimumConcentration": "Sabotage: Minimum Concentration (%)",
+  "casProduct.dhsSabotageMinimumConcentration": "Sabotage: Minimum Concentration",
+  "casProduct.dhsSabotageMinimumConcentrationPercent": "Sabotage: Minimum Concentration",
   "casProduct.dhsSabotageScreeningThresholdQuantities": "Sabotage: Screening Threshold Quantities",
   "casProduct.dhsSecurityIssueReleaseToxic": "Security Issue: Release - Toxic",
   "casProduct.dhsSecurityIssueReleaseFlammables": "Security Issue: Release - Flammables",
@@ -327,12 +328,16 @@
   "casProduct.dhsSecurityIssueTheftWME": "Security Issue: Theft - WME",
   "casProduct.dhsSecurityIssueTheftEXPIEDP": "Security Issue: Theft - EXP/IEDP",
   "casProduct.dhsSecurityIssueSabotageContamination": "Security Issue: Sabotage/Contamination",
+  "casProduct.dhsReleaseScreeningThresholdQuantities": "Release: Screening Threshold Quantities",
   "casProduct.caprop65TypeofToxicity": "Type of Toxicity",
   "casProduct.caprop65ListingMechanism": "Listing Mechanism",
   "casProduct.caprop65DateListed": "Date Listed",
   "casProduct.caprop65NSRLorMADL": "NSRL or MADL (µg/day)",
+  "casProduct.deaListI": "List I",
   "casProduct.deaListII": "List II",
   "casProduct.deaDeaCode": "DEA Code",
+  "casProduct.reachExposureScenario": "Exposure Scenario(s)",
+  "casProduct.reachSumi": "SUMIs",
   "casProduct.internationalDSL": "DSL",
   "casProduct.internationalNDSL": "NDSL",
   "casProduct.internationalEINECS": "EINECS",
@@ -341,6 +346,37 @@
   "casProduct.internationalAICS": "AICS",
   "casProduct.internationalIECSC": "IECSC",
   "casProduct.internationalKECL": "KECL",
+  "casProduct.physicalState": "Physical State",
+  "casProduct.appearance": "Appearance",
+  "casProduct.odor": "Odor",
+  "casProduct.odorThreshold": "Odor Threshold",
+  "casProduct.ph": "ph",
+  "casProduct.meltingPointRange": "Melting Point/Range",
+  "casProduct.boilingPointRange": "Boiling Point/Range",
+  "casProduct.flashPoint": "Flash Point",
+  "casProduct.evaporationPoint": "Evaporation Point",
+  "casProduct.flammabilitySolidGas": "Flammability (solid, gas)",
+  "casProduct.flammabilityOrExplosiveUpper": "Flammability or Explosive Upper",
+  "casProduct.flammabilityOrExplosiveLower": "Flammability or Explosive Lower",
+  "casProduct.vaporPressure": "Vapor Pressure",
+  "casProduct.vaporDensity": "Vapor Density",
+  "casProduct.solubility": "Solubility",
+  "casProduct.partitionCoefficient": "Partition Coefficient",
+  "casProduct.autoIgnitionTemperature": "Auto Ignition Temperature",
+  "casProduct.decompositionTemperature": "Decomposition Temperature",
+  "casProduct.viscosity": "Viscosity",
+  "casProduct.molecularFormula": "Molecular Formula",
+  "casProduct.molecularWeight": "Molecular Weight",
+  "casProduct.recommendedUses": "Recommended Use",
+  "casProduct.hazardClasses": "Hazard Classes",
+  "casProduct.usesAdvisedAgainst": "Uses Advised Against",
+  "casProduct.criticalTemperature": "Critical Temperature",
+  "casProduct.flowTimeIso2431": "Flow Time (ISO 2431)",
+  "casProduct.gasDensity": "Gas Density",
+  "casProduct.heatOfCombustion": "Heat Of Combustion",
+  "casProduct.relativeDensity": "Relative Density",
+  "casProduct.specificGravity": "Specific Gravity",
+  "casProduct.specificVolume": "Specific Volume",
   "casProduct.selectOption": "Select Option",
   "global.reset": "Reset",
   "global.placeholder.taxId": "Enter Tax ID",
